# sat

./: CMakeLists.txt
cmake/: CMakeGTK3Dependency.cmake  CMakeOpenGLDependency.cmake  CMakeSDLDependency.cmake
include/: sat.h  sat_array.h  sat_opengl.h  sat_sdl.h  sat_tcp.h
include/sat_opengl/: sat_opengl_program.h  sat_opengl_types.h  sat_opengl_window.h
include/sat_sdl/: sat_sdl_animate.h  sat_sdl_keys.h  sat_sdl_render.h  sat_sdl_types.h
include/sat_tcp/: sat_tcp_client.h  sat_tcp_server_abstract.h  sat_tcp_types.h
src/: sat_array.c  sat_opengl.c  sat_sdl.c  sat_set.c  sat_tcp.c
src/sat_opengl/: sat_opengl_program.c  sat_opengl_window.c
src/sat_sdl/: sat_sdl_animate.c  sat_sdl_keys.c  sat_sdl_render.c
src/sat_tcp/: sat_tcp_client.c  sat_tcp_server.c  sat_tcp_server_abstract.c
tests/: CMakeLists.txt  test_sat_iterator.c  test_sat_tcp.c
tests/test_opengl/: CMakeLists.txt  test_sat_opengl_triangle.c
tests/test_sdl/: test_sat_sdl_animate.c  test_sat_sdl_event.c  test_sat_sdl_init.c
